# hermetic_android_toolchains

./: .bazelignore  .bazelrc  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  extensions.bzl
.bcr/: metadata.template.json  source.template.json
.github/: generate-notes.sh  update-versions.sh
.github/workflows/: ci.yml  create-release.yml  sdk-sha256.yml  update-versions.yml
examples/basic_app/java/com/example/hermetic/: AndroidManifest.xml  BUILD.bazel  Jni.java  MainActivity.java  jni.cc  jni_dep.cc  jni_dep.h
examples/basic_app/java/com/example/hermetic/res/values/: strings.xml
examples/sdk_only/: .bazelrc  AndroidManifest.xml  BUILD.bazel  MODULE.bazel  MainActivity.java
ndk/: BUILD.androidndk.bazel  BUILD.bazel  BUILD.ndk_sysroot.tpl  BUILD.ndkredirect.bazel  exports.bzl  repositories.bzl  versions.bzl  versions.json
private/: utils.bzl
sdk/: BUILD.androidsdk.tpl  BUILD.bazel  BUILD.sdkredirect.tpl  repositories.bzl  versions.bzl  versions.json
tests/: BUILD.bazel  action_command_line_test.bzl  sdk_versions_sha256_test.py
tools/: generate_ndk_versions.py  generate_sdk_versions.py
