"""Generated Android NDK repository."""

# NOTE: Mirrored from rules_android_ndk BUILD.ndk_root.tpl, needs to roughly be kept in sync

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "target_systems.bzl",
    "sources/android/native_app_glue/android_native_app_glue.h",
    # The NDK's version manifest sits at the repo root. A non-cc-toolchain
    # consumer (e.g. a Swift cross-compile toolchain that needs the sysroot
    # *path*, not just a registered cc toolchain) can resolve this file and take
    # its dirname to locate the NDK root and the per-host sysroot directory.
    "source.properties",
])

cc_library(
    name = "cpufeatures",
    srcs = glob(["sources/android/cpufeatures/*.c"]),
    hdrs = glob([
        "ndk/sources/android/cpufeatures/*.h",
        "sources/android/cpufeatures/*.h",
    ]),
    linkopts = ["-ldl"],
)

# NOTE: New projects should use GameActivity instead.
# https://developer.android.com/games/agdk/game-activity
cc_library(
    name = "native_app_glue",
    srcs = glob(["sources/android/native_app_glue/*.c"]),
    hdrs = glob([
        "ndk/sources/android/native_app_glue/*.h",
        "sources/android/native_app_glue/*.h",
    ]),
)
