"""Generated Android NDK platform redirect repository."""

load("@hermetic_android_toolchains//ndk:exports.bzl", "ndk_cc_export", "ndk_exports_toolchain", "ndk_file_export")
load("@hermetic_android_toolchains//private:utils.bzl", "ANDROID_PLATFORMS")
load("//:target_systems.bzl", "CPU_CONSTRAINT", "TARGET_SYSTEM_NAMES")

package(default_visibility = ["//visibility:public"])

[
    toolchain(
        name = "toolchain_{}_{}".format(platform_name, target_system_name),
        exec_compatible_with = exec_compatible_with,
        target_compatible_with = [
            "@platforms//os:android",
            CPU_CONSTRAINT[target_system_name],
        ],
        toolchain = "@androidndk_{}//toolchains/llvm/prebuilt/{}-x86_64:cc_toolchain_{}".format(
            platform,
            platform,
            target_system_name,
        ),
        toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    )
    for platform in sorted(ANDROID_PLATFORMS.keys())
    for platform_name, exec_compatible_with in ANDROID_PLATFORMS[platform]["constraints"]
    for target_system_name in TARGET_SYSTEM_NAMES
]

[
    ndk_exports_toolchain(
        name = "exports_{}".format(platform_name),
        android_native_app_glue_header = "@androidndk_{}//:sources/android/native_app_glue/android_native_app_glue.h".format(platform),
        cpufeatures = "@androidndk_{}//:cpufeatures".format(platform),
        native_app_glue = "@androidndk_{}//:native_app_glue".format(platform),
    )
    for platform in sorted(ANDROID_PLATFORMS.keys())
    for platform_name, _ in ANDROID_PLATFORMS[platform]["constraints"]
]

[
    toolchain(
        name = "exports_toolchain_{}".format(platform_name),
        exec_compatible_with = exec_compatible_with,
        target_compatible_with = ["@platforms//os:android"],
        toolchain = ":exports_{}".format(platform_name),
        toolchain_type = "@hermetic_android_toolchains//ndk:exports_toolchain_type",
    )
    for platform in sorted(ANDROID_PLATFORMS.keys())
    for platform_name, exec_compatible_with in ANDROID_PLATFORMS[platform]["constraints"]
]

ndk_cc_export(
    name = "cpufeatures",
    export = "cpufeatures",
)

ndk_cc_export(
    name = "native_app_glue",
    export = "native_app_glue",
)

ndk_file_export(
    name = "sources/android/native_app_glue/android_native_app_glue.h",
    export = "android_native_app_glue_header",
)
