load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_python//python:defs.bzl", "py_test")
load("//tests:action_command_line_test.bzl", "action_command_line_test")

py_test(
    name = "sdk_versions_sha256_test",
    srcs = ["sdk_versions_sha256_test.py"],
    args = ["$(location //sdk:versions.json)"],
    data = [
        "//sdk:versions.json",
    ],
    tags = ["manual"],
)

action_command_line_test(
    name = "cc_compile_uses_hermetic_ndk_test",
    expected_argv = [
        "+android+androidndk",
        "toolchains/llvm/prebuilt",
        "bin/clang",
    ],
    mnemonic = "CppCompile",
    not_expected_argv = [
        "ANDROID_NDK_HOME",
        "local_config_cc",
        "rules_android_ndk++android_ndk_repository_extension+androidndk",
        "/usr/bin/clang",
    ],
    target_under_test = "//examples/basic_app/java/com/example/hermetic:jni_dep",
)

action_command_line_test(
    name = "android_packaging_uses_hermetic_sdk_test",
    expected_argv = [
        "+android+androidsdk",
        "zipalign",
    ],
    mnemonic = "AndroidZipAlign",
    not_expected_argv = [
        "ANDROID_HOME",
        "local_config_android",
        "/opt/android-sdk",
        "rules_android++android_sdk_repository_extension+androidsdk",
    ],
    target_under_test = "//examples/basic_app/java/com/example/hermetic:app",
)

_SDK_PLATFORM_SPECIFIC_TARGETS = [
    "aapt2",
    "aapt2_binary",
    "aapt_binary",
    "adb",
    "aidl_binary",
    "apksigner",
    "build_tools_libs",
    "dexdump",
    "files",
    "platform-tools/adb",
    "zipalign",
    "zipalign_binary",
]

_SDK_HUB_TARGETS = [
    "android_car",
    "android_car-35",
    "api_35_enabled",
    "core-for-system-modules-jar",
    "d8_compat_dx",
    "generate_main_dex_list",
    "has_androidsdk",
    "legacy_test-35",
    "main_dex_list_creator",
    "org_apache_http_legacy",
    "org_apache_http_legacy-35",
    "sdk",
    "sdk-toolchain",
]

# Makes sure we set these to something that doesn't just error
build_test(
    name = "valid_labels_build_test",
    targets = [
        "@androidsdk//:platform-tools/adb",
        "@androidsdk//:sdk-toolchain",
    ] + [
        "@androidsdk//:{}".format(target)
        for target in _SDK_PLATFORM_SPECIFIC_TARGETS + _SDK_HUB_TARGETS
    ] + [
        # buildifier: disable=canonical-repository
        "@@+android+androidsdk_{}//:{}".format(platform, target)
        for platform in [
            "linux",
            "darwin",
            "windows",
        ]
        for target in _SDK_PLATFORM_SPECIFIC_TARGETS
    ],
)
