load("@rules_android//rules:rules.bzl", "android_binary", "android_library")

package(default_visibility = ["//visibility:public"])

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [":lib"],
)

android_library(
    name = "lib",
    srcs = ["MainActivity.java"],
    manifest = "AndroidManifest.xml",
    tags = ["manual"],
)
