module(name = "sdk_only_example")

bazel_dep(name = "hermetic_android_toolchains", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "hermetic_android_toolchains",
    path = "../..",
)

bazel_dep(name = "protobuf", version = "35.1", dev_dependency = True)
bazel_dep(name = "rules_android", version = "0.7.3", dev_dependency = True)

android = use_extension("@hermetic_android_toolchains//:extensions.bzl", "android", dev_dependency = True)
android.sdk(
    build_tools_version = "35.0.0",
    version = "35",
)
use_repo(android, "androidsdk")

rules_android_sdk = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
    dev_dependency = True,
)

override_repo(rules_android_sdk, "androidsdk")

register_toolchains(
    "@androidsdk//:all",
    dev_dependency = True,
)
