load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_android//rules:rules.bzl", "android_binary", "android_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [":lib"],
)

android_library(
    name = "lib",
    srcs = [
        "Jni.java",
        "MainActivity.java",
    ],
    manifest = "AndroidManifest.xml",
    resource_files = ["res/values/strings.xml"],
    tags = ["manual"],
    deps = [":jni"],
)

cc_library(
    name = "jni",
    srcs = ["jni.cc"],
    tags = ["manual"],
    deps = [":jni_dep"],
)

cc_library(
    name = "jni_dep",
    srcs = ["jni_dep.cc"],
    hdrs = ["jni_dep.h"],
    linkopts = ["-llog"],
    tags = ["manual"],
    deps = [
        "@androidndk//:cpufeatures",
        "@androidndk//:native_app_glue",
    ],
)

build_test(
    name = "app_build_test",
    targets = [":app"],
)
